@@ -62,8 +62,8 @@
     </dependency>
 
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
 
@@ -92,6 +92,9 @@
     <artifactId>maven-compiler-plugin</artifactId>
     <configuration>
         <release>21</release>
+      <source>21</source>
+      <target>21</target>
+      <compilerArgs>--enable-preview</compilerArgs>
     </configuration>
 </plugin>
     </plugins>
